# sudoratio

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
sudoratio-core/: Cargo.toml
sudoratio-core/src/: bandwidth.rs  config.rs  config_io.rs  engine.rs  error.rs  lib.rs  metainfo.rs  persistence.rs  preset.rs  profile_store.rs  state.rs  torrent.rs
sudoratio-core/src/announce/: headers.rs  identity.rs  mod.rs  public_ip.rs  query.rs  request.rs  response.rs  trace.rs
sudoratio-core/src/profile/: client_doc.rs  codec.rs  generation.rs  key.rs  mod.rs  peer_id.rs  refresh.rs  schema.rs
sudoratio-core/src/profile/bundled/: mod.rs
sudoratio-core/src/profile/bundled/files/: biglybt.toml  bittorrent.toml  deluge.toml  leap.toml  qbittorrent.toml  rtorrent.toml  transmission.toml  utorrent.toml  vuze.toml
sudoratio-core/src/scheduler/: delay_queue.rs  mod.rs  slots.rs
sudoratio-core/src/wire/: dialer.rs  handshake.rs  listener.rs  mod.rs  peer.rs
sudoratio-server/: Cargo.toml  build.rs
sudoratio-server/src/: auth.rs  bundled.rs  cli.rs  config_io.rs  error.rs  lib.rs  main.rs  profile_store.rs  server.rs  session.rs  state.rs  static_assets.rs
sudoratio-server/src/routes/: config.rs  diagnostics.rs  health.rs  mod.rs  presets.rs  profiles.rs  stats.rs  torrents.rs
sudoratio-server/tests/: announce_integration.rs  http_integration.rs  lifecycle_integration.rs
web/: biome.json  index.html  package.json  vite.config.ts
web/public/: manifest.json
web/src/: main.tsx  routeTree.gen.ts  styles.css
web/src/components/: add-torrent-dialog.tsx  app-shell.tsx  diff-list.tsx  form-fields.tsx  preset-chip-strip.tsx  preset-chip.tsx  preset-delete-dialog.tsx  preset-picker-sheet.tsx  preset-pill.tsx  preset-policy-fields.tsx  save-confirm-dialog.tsx  session-menu.tsx  theme-provider.tsx  torrent-actions.tsx  torrent-detail-sheet.tsx  torrent-status-badge.tsx
web/src/components/ui/: dialog.tsx  dropdown-menu.tsx  field.tsx  inline-edit.tsx  input.tsx  popover.tsx  sheet.tsx  tabs.tsx
web/src/hooks/: use-now.ts
web/src/lib/: api.ts  auth.ts  form-contexts.ts  form-hook.ts  format.ts  preset-colors.ts  preset-context.tsx  queries.ts  schemas.ts  theme.ts  types.ts
web/src/routes/: __root.tsx  _authed.tsx  login.tsx
web/src/routes/_authed/: clients.tsx  config.tsx  index.tsx
