[package]
name = "sudoratio-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP API + embedded SPA wrapping sudoratio-core."
build = "build.rs"

[[bin]]
name = "sudoratio-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
rust-embed = { version = "8", features = ["mime-guess"] }
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sudoratio-core = { path = "../sudoratio-core" }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http = "1"
http-body-util = "0.1"
sha1 = "0.10"
tempfile = "3"
tower = { version = "0.5", features = ["limit", "util"] }
wiremock = "0.6"
